# Computer-Vision

./: .gitignore  .gitmodules  Makefile  README.md  Utils.cpp  Utils.h  c_cpp_properties.json  image_handler.cpp  image_handler.h  main.cpp  settings.json
Basics/Basic image_recognition/: image_handler.cpp  image_handler.h
Basics/Classification/K-Nearest Neighbors/: Makefile
Basics/Classification/K-Nearest Neighbors/src/: main.cpp
Basics/Digit_Recognition/: Makefile  cApp.cpp  cApp.h  cMain.cpp  cMain.h  main.c  mnist.c  perceptron  perceptron.c  perceptron.cu  perceptron.h  test_perceptron
Basics/Image Processing/: Utils.cpp  Utils.h
Basics/Image Processing/App/: main.cpp
Basics/Image Processing/App/include/: image_processor.h
Basics/Image Processing/App/src/: mainwindow.cpp
Basics/Image Processing/Image Segmentation (color range based)/: Makefile
Basics/Image Processing/Image Segmentation (color range based)/include/: mainwindow.h
Basics/Image Processing/Image Segmentation (color range based)/src/: mainmenu.cpp  (+1 more)
Basics/Image Processing/Preprocessing/: Utils.cpp
Basics/Image Recognition/Neural Networks approach/: Makefile  Utils.cpp  Utils.h  prediction
Basics/Image Recognition/Percentage approach/: Utils.cpp  Utils.h  image_handler.cpp  image_handler.h  main.cpp  prediction
Basics/Tracking/: ShapeTracker.cpp  ShapeTracker.h  main.cpp
Camera calibration/: CMakeLists.txt  camera_pose_estimator.hpp
Camera calibration/Homography Stitching/: homography_stitcher.hpp
Camera calibration/Pose Estimator/: camera_pose_estimator.cpp  main.cpp
Camera calibration/Pose Solver/: homography_pose_solver.cpp  homography_pose_solver.hpp  main.cpp
Camera pose estimation/: camera_pose_estimator.cpp
Classification/Cascade/Basic/: main.cpp
Classification/HSV Thresh/: classifier_brightness.cpp
Classification/K-Nearest Neighbors/include/: KNN.h  KNN.hpp
Classification/K-Nearest Neighbors/src/: KNN.cpp  main.cpp
Classification/SVM/: CMakeLists.txt
Classification/SVM/include/: SVM.h  main_window.h
Classification/SVM/src/: SVM.cpp  main.cpp  main_window.cpp
Clustering/: KMeans.cpp
Digit Recognition/CNN Approach/: cnn.c  cnn.h  main.c  utils.h
Digit Recognition/Image Recognition/Percentage approach/: Utils.cpp  Utils.h
Digit Recognition/Image Similarity/Neural Networks approach/: main.cpp
Digit_Recognition/: perceptron.h
Feature Extraction/Features and Boundaries/: SIFT.cpp
Feature Extraction/HOG/: CMakeLists.txt  HOGExtractor.cpp  HOGExtractor.h  main.cpp
Feature Extraction/SIFT/: SIFT.cpp  SIFT.h
Image Processing/App/: CMakeLists.txt  qml.qrc
Image Processing/App/qml/: home.qml  main.qml  showImage.qml  showVideo.qml
Image Processing/App/src/: main.cpp  mainwindow.cpp
Image Processing/App/src/backend/: file_capture.cpp  file_capture.h  frame.cpp  frame.h  mainwindow.h  thread_manager.cpp  thread_manager.h
Image Processing/Basics/: Image_as_a_matrix.cpp
Image Processing/GPU/: CMakeLists.txt  blur.cpp  camera.cpp
Image Processing/GPU Filtering/: CMakeLists.txt
Image Processing/Homography Stitching/: main.cpp
Image Processing/Homography_Stitching/: homography_stitcher.cpp
Image Processing/Image Class/: functions.h  functions.hpp  image.cpp  image.h  image.hpp
Image Processing/Image Segmentation (color range based)/include/: kernelwindow.h  mainmenu.h  mainwindow.h
Image Processing/Image Segmentation (color range based)/src/: image_processor.cpp  kernelwindow.cpp  main.cpp
Image Processing/Preprocessing/Methods/: Utils.cpp  Utils.hpp
Image Processing/Transforms/: sigmoid.cpp
Labs/Digit Recognition/CNN Approach/: utils.c
Labs/Digit Recognition/Perceptron Approach/: Makefile
Motion Estimation/Block Matching/: block_matching_tracker.cpp  block_matching_tracker.hpp  main.cpp
Motion Estimation/Optical Flow/: farneback_tracker.hpp  lk_tracker.cpp  lk_tracker.hpp  main.cpp  optical_flow.cpp  optical_flow.hpp
Motion Estimation/Optical Flow/Farneback/: CMakeLists.txt  farneback_tracker.cpp
Motion Estimation/Optical Flow/Lucas-Kanade/: CMakeLists.txt  main.cpp  pyramidal_lk.cpp  pyramidal_lk.hpp
Notebooks/: Basics.ipynb
Object tracking/Face Annotation/: CMakeLists.txt  main.cpp
Object tracking/Homography/: RANSAC.cpp
Object tracking/ShapeTracker/: ShapeTracker.cpp
Object tracking/Trackbar/: CMakeLists.txt  main.cpp
Object tracking/Trackbar/Track Class/: blob.cpp  blob.hpp  track.cpp  track.hpp
Projects/App/: CMakeLists.txt
Projects/App/qml/: main.qml  showVideo.qml
Projects/App/src/backend/: file_capture.cpp  file_capture.h  frame.h  thread_manager.cpp  thread_manager.h
Projects/Exploratory-A/Filter App/: main.cpp
Projects/Exploratory-A/Lane Tracking/: feature_detector.cpp  line_detector.cpp  mainwindow.cpp  mainwindow.h
Projects/Lane Tracking/: feature_detector.hpp  line_detetor.h  mainwindow.cpp  mainwindow.h
Projects/SIFT detection/: main.cpp
Seg/: Utils.cpp  Utils.h  main.cpp
Segmentation/: CMakeLists.txt  contour_analysis.cpp
Segmentation/Background Segmentation/: background_seg.cpp
Segmentation/Blobs/: blob_detector.cpp  blob_detector.hpp
Segmentation/Clustering/: KMeans.cpp  KMeans.hpp
Segmentation/Clustering/K Means/: KMeans.cpp  KMeans.hpp
Segmentation/Clustering/Mean-Shift/: mean_shift.cpp  mean_shift.hpp
Segmentation/Contour Detection/: main.cpp
Segmentation/Contour Detection/Shape Detection/: CMakeLists.txt  contour_detector.cpp  contour_detector.hpp  main.cpp
Segmentation/Differencing/: CMakeLists.txt  main.cpp
Segmentation/Geometric Analysis/: geometric_shape_detector.cpp  main.cpp
Segmentation/Geometric-Analysis/: geometric_shape_detector.hpp
(+5 files in other folders)
